# SK-Autopilot

./: .gitignore  README.md  jhj.txt  sk-autopilot.workspace.user.4.9-pre1  sk-autopilot.workspace.user.e23ea8a  sk.rviz
logs/modudculab_ros/: build.cmake.011.log.stderr
logs/sk_autopilot/: build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.028.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.040.log.stderr  build.make.043.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.061.log.stderr  build.make.070.log.stderr  build.make.071.log.stderr  build.make.072.log.stderr  build.make.073.log.stderr  build.make.075.log.stderr  build.make.081.log.stderr  build.make.087.log.stderr
logs/waypoint_generator/: build.check.003.log.stderr  build.check.010.log.stderr  (+52 more)
plan/: inchun.plan  inchun1.plan  inchun_final.plan  inchun_final_realreal.plan  inchun_final_realreal2.plan
src/tflite_detector/: CMakeLists.txt  package.xml
src/tflite_detector/scripts/: classify_mnist.py  digit_detector.py  mnist_data.py  publisher.py
ulog/: 00_00_08.ulg  00_00_12.ulg  00_27_49.ulg  00_28_10.ulg  00_28_21.ulg  00_29_44.ulg  01_26_13.ulg  01_26_16.ulg  01_26_25.ulg
(+73 files in other folders)
