<?xml version="1.0"?>
<package>
  <name>tflite_detector</name>
  <version>0.0.2</version>
  <description>tflite_detector</description>

  <maintainer email="soo@gmail.com">Eric Wieser</maintainer>

  <license>MIT</license>

<!--  <url type="website">http://wiki.ros.org/ros_numpy</url>
  <url type="repository">https://github.com/eric-wieser/ros_numpy</url>
  <url type="bugtracker">https://github.com/eric-wieser/ros_numpy/issues</url>-->

  <author email="soo@gmail.com">Eric Wieser</author>

  <run_depend>python-numpy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sk_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
